# ITKDemo

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.local.json
cmake/: binary_finder.cmake  directory.cmake
src/Example/01_ManuaIType/: main.cpp
src/Example/02_2DDcm2VolumnData/: main.cpp
src/Example/03_DicomImageReadPrintTages/: main.cpp
src/Example/04_DicomSeriesReadPrintTages/: main.cpp
src/Example/05_DCMTKSeriesRead/: main.cpp
src/Filters/6_1_1BinaryThresholdImageFilter/: main.cpp
src/Filters/6_1_1ThresholdImageFilter/: main.cpp
src/Filters/6_3_2SigmoidImageFilter/: main.cpp
src/Filters/6_4_1GradientMagnitudeImageFilter/: main.cpp
src/Filters/6_4_1GradientMangnitudeRecursiveGaussianImageFilter/: main.cpp
src/Filters/6_4_2DerivativeImageFilter/: main.cpp
src/Filters/6_5_2LaplacianRecursiveGaussianImageFilter/: main.cpp
src/Filters/6_6_1MeanImageFilter/: main.cpp
src/Filters/6_6_2MedianImageFilter/: main.cpp
src/Filters/6_6_3MathematicalMorphologyBinaryFilter/: main.cpp
src/Filters/6_6_3MathematicalMorpologyGrayscaleFilter/: main.cpp
src/Filters/6_6_4BinaryMedianImageFilter/: main.cpp
src/Filters/6_6_4VotingBinaryHoleFillingImageFilter/: main.cpp
src/Filters/6_6_4VotingBinaryIterativeHoleFillingImageFilter/: main.cpp
src/Filters/6_7_1DiscreteGaussianImageFilter/: main.cpp
src/Filters/6_7_1SmoothingRecursiveGaussianImageFilter/: main.cpp
src/Filters/6_7_3_1GradientAnisotropicDiffusionImageFilter/: main.cpp
src/Filters/6_7_3_2CurvatureAnisotropicDiffusionImageFilter/: main.cpp
src/Filters/6_7_3_3CurvatureFlowImageFilter/: main.cpp
src/Filters/6_7_3_4MinMaxCurvatureFlowImageFilter/: main.cpp
src/Filters/6_7_3_5BilateralImageFilter/: main.cpp
src/Filters/6_7_4_1VectorGradientAnisotropicDiffusiongImageFilter/: main.cpp
src/Filters/6_7_4_2VectorCurvatureAnisotropicDiffusionImageFilter/: main.cpp
src/Filters/6_7_5_1RGBGradientAnisotropicDiffusionImageFilter/: main.cpp
src/Filters/6_7_5_2RGBCurvatureAnisotropicDiffusionImageFilter/: main.cpp
src/Filters/6_9_3ResampleImageFilter/: main.cpp
src/GDCMReadDemo/: CMakeLists.txt  main.cpp
src/ImageViewer/: CMakeLists.txt  ImageParse.cpp  ImageParse.h  ImageViewer.h
(+7 files in other folders)
